# charcoal-detector

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  train.py
docs/: model-review-notes.md  qupath-export-workflow.md
scripts/: make_contact_sheet.py  predict_samples.py  prepare_qupath_dataset.py
scripts/qupath/: export_selected_region_tiles_and_masks.groovy  export_training_regions_as_tiles_and_masks.groovy
src/charcoal_detector/: __init__.py  image_io.py  inference.py  models.py  training.py
